// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processProjectsSearchCriteria > should combine all search criteria 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by budget range 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 50000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Website Redesign",
    "startDate": "2013-04-16",
    "status": "COMPLETED",
    "team": [
      {
        "id": 5,
        "name": "Eve",
      },
    ],
  },
  {
    "budget": 60000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Legacy System Migration",
    "startDate": "2013-04-16",
    "status": "ON_HOLD",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by maximum budget 1`] = `
[
  {
    "budget": 25000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Mobile App Development",
    "startDate": "2013-04-16",
    "status": "PLANNING",
    "team": [
      {
        "id": 3,
        "name": "Bob",
      },
    ],
  },
  {
    "budget": 50000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Website Redesign",
    "startDate": "2013-04-16",
    "status": "COMPLETED",
    "team": [
      {
        "id": 5,
        "name": "Eve",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by minimum budget 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 100000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Security Implementation",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 4,
        "name": "Alice",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by name (case-insensitive partial match) 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 100000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Security Implementation",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 4,
        "name": "Alice",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by status 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 100000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Security Implementation",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 4,
        "name": "Alice",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by team members with ALL mode 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 60000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Legacy System Migration",
    "startDate": "2013-04-16",
    "status": "ON_HOLD",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should filter projects by team members with ANY mode 1`] = `
[
  {
    "budget": 75000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Migration Project",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
  {
    "budget": 100000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Cloud Security Implementation",
    "startDate": "2013-04-16",
    "status": "ACTIVE",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 4,
        "name": "Alice",
      },
    ],
  },
  {
    "budget": 60000,
    "description": "Deleniti rerum impedit.
Cum sed eaque quo accusantium.
Voluptas reprehenderit aut pariatur eligendi consequatur.",
    "endDate": "2019-04-27",
    "id": "579ef28f-c539-41ff-abe2-e4f6b1c1afed",
    "manager": 67429059,
    "name": "Legacy System Migration",
    "startDate": "2013-04-16",
    "status": "ON_HOLD",
    "team": [
      {
        "id": 1,
        "name": "John",
      },
      {
        "id": 2,
        "name": "Jane",
      },
    ],
  },
]
`;

exports[`processProjectsSearchCriteria > should return empty result for criteria with no match 1`] = `[]`;
